fix: remove animation & title font weight

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3328,6 +3328,7 @@ body {
   font-size: 3.8rem;
   text-align: center;
   margin-bottom: 5rem;
+  font-weight: 700;
 }
 .mainvisual__img {
   width: 45%;
